[package]
name = "griddb"
version = "0.6.0"
edition = "2021"
description = "GridDB Rust client"
keywords = ["griddb", "iot", "database", "big-data", "time-series"]
license = "Apache-2.0"
repository = "https://github.com/griddbnet/griddb-rust-client"
homepage = "https://griddb.net/en/"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
griddbnet-sys = { version = "5.0.0", path = "griddbnet-sys" }
chrono = "0.4"
convert_case = "^0.3.0"
