[package]
name = "griddbnet-sys"
version = "5.0.0"
edition = "2021"
description = "binding for griddb rust client"
license = "Apache-2.0"

include = [
  "LICENSE",
  "README.md",
  "Cargo.toml",
  "build.rs",
  "src/*.rs",
  "src/**/*.rs",
  "include/gridstore.h",
]

[lib]
name = "griddbnet_sys"
path = "src/lib.rs"

[dependencies]
clang-sys = { version = "1", features = ["clang_6_0"] }

[build-dependencies]
bindgen = "0.59.1"

[features]
static = ["clang-sys/static"]
runtime = ["clang-sys/runtime"]
